--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -690,23 +690,23 @@ input[type="file"]{font-size:14px}
 .owl-carousel .owl-dots .owl-dot.active{opacity:1;-webkit-transform:scale(1.4);transform:scale(1.4)}
 .owl-carousel .carousel-item{display:block}
 .owl-list .owl-nav{position:absolute;z-index:-1;top:50%;margin-top:-60px;width:100%;display:-webkit-box;display:-ms-flexbox;display:flex}
-.owl-list .owl-nav>div{font-size:0;opacity:.25;display:-webkit-box;display:-ms-flexbox;display:flex}
-.owl-list .owl-nav>div:hover{opacity:1}
-.owl-list .owl-nav>div.owl-prev{margin-left:-70px}
-.owl-list .owl-nav>div.owl-prev:after{content:"\f053";font-family:"Font Awesome 5 Free";font-weight:600;font-size:36px}
-.owl-list .owl-nav>div.owl-next{margin-left:auto;margin-right:-70px}
-.owl-list .owl-nav>div.owl-next:after{content:"\f054";font-family:"Font Awesome 5 Free";font-weight:600;font-size:36px}
+.owl-list .owl-nav>button{font-size:0;opacity:.25;display:-webkit-box;display:-ms-flexbox;display:flex}
+.owl-list .owl-nav>button:hover{opacity:1}
+.owl-list .owl-nav>button.owl-prev{margin-left:-70px}
+.owl-list .owl-nav>button.owl-prev:after{content:"\f053";font-family:"Font Awesome 5 Free";font-weight:600;font-size:36px}
+.owl-list .owl-nav>button.owl-next{margin-left:auto;margin-right:-70px}
+.owl-list .owl-nav>button.owl-next:after{content:"\f054";font-family:"Font Awesome 5 Free";font-weight:600;font-size:36px}
 .owl-slide .carousel-item{background-position:center;background-size:cover}
 .owl-slide .carousel-overlay{position:absolute;bottom:0;left:0;right:0;top:0;width:100%;height:100%;opacity:.7;z-index:2;background-color:#2d2d2d}
 .owl-slide .carousel-caption{position:absolute;left:0;right:0;bottom:0;top:0;z-index:3;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:horizontal;-webkit-box-direction:normal;-ms-flex-direction:row;flex-direction:row;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;text-align:center;color:#fff;max-width:800px;margin:0 auto}
 .owl-slide .carousel-caption .carousel-title{font-size:35px;margin-bottom:0;color:#fff;font-weight:600}
 .owl-slide .carousel-caption p{font-size:17px;color:#d3d3d3;margin-top:10px;font-weight:400}
 .owl-slide .carousel-caption .btn{font-size:15px;margin-top:25px;padding:18px 27px}
-.owl-slide .owl-nav>div{font-size:0;position:absolute;left:0;top:0;height:100%;width:10%;z-index:3;color:#fff;opacity:.15;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center}
-.owl-slide .owl-nav>div:hover{opacity:1}
-.owl-slide .owl-nav>div.owl-prev:after{content:"\f053";font-family:"Font Awesome 5 Free";font-weight:600;font-size:36px}
-.owl-slide .owl-nav>div.owl-next{left:auto;right:0px}
-.owl-slide .owl-nav>div.owl-next:after{content:"\f054";font-family:"Font Awesome 5 Free";font-weight:600;font-size:36px}
+.owl-slide .owl-nav>button{font-size:0;position:absolute;left:0;top:0;height:100%;width:10%;z-index:3;color:#fff;opacity:.15;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center}
+.owl-slide .owl-nav>button:hover{opacity:1}
+.owl-slide .owl-nav>button.owl-prev:after{content:"\f053";font-family:"Font Awesome 5 Free";font-weight:600;font-size:36px}
+.owl-slide .owl-nav>button.owl-next{left:auto;right:0px}
+.owl-slide .owl-nav>button.owl-next:after{content:"\f054";font-family:"Font Awesome 5 Free";font-weight:600;font-size:36px}
 .owl-logos .owl-stage{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-align:center;-ms-flex-align:center;align-items:center}
 .card{background-color:#fff;border:1px solid #dedede;-webkit-box-shadow:0 1px 2px 0 rgba(0,0,0,0.07);box-shadow:0 1px 2px 0 rgba(0,0,0,0.07);margin-bottom:30px;border-radius:6px}
 .card .card-img{position:relative;margin:-1px -1px 0 -1px;width:auto}
