--- a/resources/assets/scss/_type.scss
+++ b/resources/assets/scss/_type.scss
@@ -126,7 +126,7 @@ button.close {
 
 img {
 	max-width: 100%;
-  image-rendering: -webkit-optimize-contrast;
+	image-rendering: -webkit-optimize-contrast;
 }
 
 .blockquote {
@@ -174,7 +174,7 @@ img {
 
 		> a {
 			color: #737373;
-			border-radius: 0px;
+			border-radius: 0;
 			font-size: 14px;
 		}
 	}
