--- a/resources/assets/scss/_custom.scss
+++ b/resources/assets/scss/_custom.scss
@@ -6,3 +6,15 @@
 textarea:focus, button:focus, input:focus{
   outline: none;
 }
+
+.youtube-link:hover {
+  color:#FF0000;
+}
+
+.facebook-link:hover {
+  color:#3b5998;
+}
+
+.twitter-link:hover {
+  color: #00aced;
+}
