--- a/resources/assets/scss/_variables.scss
+++ b/resources/assets/scss/_variables.scss
@@ -1,5 +1,6 @@
 // Typography
-$font-family-base:                      "Roboto", sans-serif !default;
+$font-family-base:                      "Ubuntu", sans-serif !default;
+$font-family-secondary:                 "Open Sans", sans-serif !default;
 $font-weight-base:                      300 !default;
 $font-size-base:                        15px !default;
 $font-size-lg:                          1.25rem !default;
