--- a/resources/assets/scss/_type.scss
+++ b/resources/assets/scss/_type.scss
@@ -1,5 +1,5 @@
 body {
-	font-family: $font-family-base;
+	font-family: $font-family-secondary;
 	font-weight: $font-weight-base;
 	font-size: $font-size-base;
 	line-height: 1.5;
