--- a/resources/assets/scss/_custom.scss
+++ b/resources/assets/scss/_custom.scss
@@ -18,3 +18,7 @@ textarea:focus, button:focus, input:focus{
 .twitter-link:hover {
   color: #00aced;
 }
+
+.nav {
+  font-family: $font-family-base;
+}
