--- a/resources/assets/scss/_variables.scss
+++ b/resources/assets/scss/_variables.scss
@@ -17,6 +17,14 @@ $theme-danger:                          #e9594a !default;
 $theme-warning:                         #FFA14F !default;
 $theme-inverse:                         #3f464f !default;
 
+// Game System Colors
+$color-xbox:                            #107C10 !default;
+$color-playstation:                     #003791 !default;
+$color-nintendo:                        #CE171E !default;
+$color-steam:                           #305f80 !default;
+$color-pc:                              #1B2838 !default;
+$color-uplay:                           #0070ff !default;
+
 // Social Colors
 $color-facebook:                        #3b5999 !default;
 $color-twitter:                         #55acee !default;
