Continued work on how the users will upload images

--- a/public/css/ProjectSpectR.css
+++ b/public/css/ProjectSpectR.css
@@ -46,7 +46,7 @@ a {
 a:hover,
 a:active,
 a:focus {
-  color: #2575dc;
+  color: #242629;
   text-decoration: none;
   outline: 0 !important;
 }
@@ -157,7 +157,6 @@ button.close {
 }
 
 img {
-  max-width: 100%;
   image-rendering: -webkit-optimize-contrast;
 }
 
@@ -904,7 +903,7 @@ section.bg-image .container {
   font-size: 15px;
   z-index: 5;
   border-radius: 5px;
-  border-left: 3px solid #2575dc;
+  border-left: 3px solid #242629;
 }
 
 .video-play h5 i {
@@ -1043,16 +1042,16 @@ section.bg-secondary {
 }
 
 .toolbar ul.toolbar-nav li:hover a {
-  color: #2575dc;
-  -webkit-box-shadow: 0 3px 0 0 #2575dc;
-          box-shadow: 0 3px 0 0 #2575dc;
+  color: #242629;
+  -webkit-box-shadow: 0 3px 0 0 #242629;
+          box-shadow: 0 3px 0 0 #242629;
 }
 
 .toolbar ul.toolbar-nav li.active a {
-  color: #2575dc;
+  color: #242629;
   font-weight: 500;
-  -webkit-box-shadow: 0 3px 0 0 #2575dc;
-          box-shadow: 0 3px 0 0 #2575dc;
+  -webkit-box-shadow: 0 3px 0 0 #242629;
+          box-shadow: 0 3px 0 0 #242629;
 }
 
 .toolbar.toolbar-links {
@@ -1371,7 +1370,7 @@ section.error-404 form {
   height: 100%;
   opacity: .85;
   z-index: 2;
-  background-color: #2575dc;
+  background-color: #242629;
 }
 
 .hero .btn .fa-play {
@@ -1565,7 +1564,7 @@ section.error-404 form {
 }
 
 .btn-rounded {
-  border-radius: 30px;
+  border-radius: 2px;
   padding: 14px 20px;
 }
 
@@ -1745,8 +1744,8 @@ section.error-404 form {
 
 .btn-primary {
   color: #fff;
-  background-color: #2575dc;
-  border-color: #2575dc;
+  background-color: #242629;
+  border-color: #b1b1b1;
 }
 
 .btn-primary:focus,
@@ -1755,8 +1754,8 @@ section.error-404 form {
 .show > .btn-primary.dropdown-toggle:hover,
 .show > .btn-primary.dropdown-toggle:focus {
   color: #fff;
-  background-color: #327dde;
-  border-color: #327dde;
+  background-color: #2b2e31;
+  border-color: #2b2e31;
   outline: 0;
 }
 
@@ -1769,8 +1768,8 @@ section.error-404 form {
 .btn-primary.active,
 .btn-primary:active {
   color: #fff;
-  background-color: #2575dc;
-  border-color: #2575dc;
+  background-color: #242629;
+  border-color: #b1b1b1;
 }
 
 .btn-primary.active:hover,
@@ -1780,8 +1779,8 @@ section.error-404 form {
 .btn-primary:active:focus,
 .btn-primary:active.focus {
   color: #fff;
-  background-color: #2575dc;
-  border-color: #2575dc;
+  background-color: #242629;
+  border-color: #b1b1b1;
 }
 
 .btn-primary.disabled:hover,
@@ -1793,8 +1792,8 @@ section.error-404 form {
 fieldset[disabled] .btn-primary:hover,
 fieldset[disabled] .btn-primary:focus,
 fieldset[disabled] .btn-primary.focus {
-  background-color: #2575dc;
-  border-color: #2575dc;
+  background-color: #242629;
+  border-color: #b1b1b1;
 }
 
 .btn-info {
@@ -2242,9 +2241,9 @@ fieldset[disabled]
 }
 
 .btn-outline-primary {
-  color: #2575dc;
+  color: #242629;
   background-color: transparent;
-  border-color: #8ab5ec;
+  border-color: #5b6067;
 }
 
 .btn-outline-primary.active,
@@ -2255,8 +2254,8 @@ fieldset[disabled]
 .open > .btn-outline-primary.dropdown-toggle:hover,
 .open > .btn-outline-primary.dropdown-toggle:focus {
   color: #fff;
-  background-color: #2575dc;
-  border-color: #2575dc;
+  background-color: #242629;
+  border-color: #242629;
 }
 
 .btn-outline-info {
@@ -3064,7 +3063,7 @@ fieldset[disabled]
 .dropdown-menu .active:focus,
 .dropdown-menu .active:hover {
   color: #fff;
-  background-color: #2575dc;
+  background-color: #242629;
 }
 
 .dropcap {
@@ -3145,7 +3144,7 @@ fieldset[disabled]
 
 .form-control:focus {
   background-color: #fff;
-  border-color: #93bbee;
+  border-color: #60656d;
   -webkit-box-shadow: none;
           box-shadow: none;
 }
@@ -3525,18 +3524,18 @@ input[type="file"] {
 }
 
 .custom-checkbox-primary .custom-control-input:checked ~ .custom-control-indicator {
-  border-color: #2575dc;
-  background-color: #2575dc;
+  border-color: #242629;
+  background-color: #242629;
 }
 
 .custom-checkbox-primary .custom-control-input:indeterminate ~ .custom-control-indicator {
-  background-color: #2575dc;
+  background-color: #242629;
 }
 
 .custom-checkbox-primary .custom-control-input:active ~ .custom-control-indicator,
 .custom-checkbox-primary .custom-control-input:checked ~ .custom-control-indicator {
-  background-color: #2575dc;
-  border-color: #2575dc;
+  background-color: #242629;
+  border-color: #242629;
 }
 
 .custom-checkbox-danger .custom-control-input:checked ~ .custom-control-indicator {
@@ -3631,8 +3630,8 @@ input[type="file"] {
 
 .custom-radio-primary .custom-control-input:active ~ .custom-control-indicator,
 .custom-radio-primary .custom-control-input:checked ~ .custom-control-indicator {
-  border-color: #2575dc;
-  background-color: #2575dc;
+  border-color: #242629;
+  background-color: #242629;
 }
 
 .custom-radio-success .custom-control-input:active ~ .custom-control-indicator,
@@ -3705,7 +3704,7 @@ input[type="file"] {
 }
 
 .checkbox-toggle.checkbox-primary input[type=checkbox]:checked + label:before {
-  color: #2575dc;
+  color: #242629;
 }
 
 .checkbox-toggle.checkbox-danger input[type=checkbox]:checked + label:before {
@@ -3837,7 +3836,7 @@ input[type="file"] {
 }
 
 .progress-bar {
-  background-color: #2575dc;
+  background-color: #242629;
   line-height: 15px;
   -webkit-box-shadow: none;
   box-shadow: none;
@@ -3933,12 +3932,12 @@ input[type="file"] {
 }
 
 .pagination .active > a {
-  background-color: #2575dc !important;
-  border-color: #2575dc !important;
+  background-color: #242629 !important;
+  border-color: #242629 !important;
 }
 
 .pagination .active > a:hover {
-  background-color: #2575dc !important;
+  background-color: #242629 !important;
 }
 
 .pager li > a {
@@ -4081,7 +4080,7 @@ input[type="file"] {
 }
 
 .modal-primary .modal-header {
-  background-color: #2575dc;
+  background-color: #242629;
 }
 
 .modal-success .modal-header {
@@ -4286,9 +4285,12 @@ input[type="file"] {
   background-color: #305f80;
 }
 
-.badge-uplay,
 .badge-info {
   background-color: #52BAFF;
+}
+
+.badge-uplay {
+  background-color: #0070ff;
 }
 
 .badge-danger {
@@ -4345,8 +4347,8 @@ input[type="file"] {
 
 .badge-outline-primary {
   font-weight: 600;
-  color: #2575dc;
-  border: 1px solid #5191e3;
+  color: #242629;
+  border: 1px solid #3c3f44;
   border-radius: 3px;
 }
 
@@ -4911,11 +4913,11 @@ input[type="file"] {
 }
 
 .card-primary {
-  border-color: #2575dc;
+  border-color: #242629;
 }
 
 .card-primary .card-header {
-  background-color: #2575dc;
+  background-color: #242629;
 }
 
 .card-primary .card-header .card-title {
@@ -5397,14 +5399,14 @@ input[type="file"] {
 .tabs-color .nav-tabs .nav-item .nav-link.active {
   background-color: transparent;
   border-width: 0 0 2px 0;
-  border-color: #2575dc;
+  border-color: #242629;
 }
 
 .tabs-color .nav-tabs .nav-item .nav-link.active:focus,
 .tabs-color .nav-tabs .nav-item .nav-link.active:hover {
   background-color: transparent;
   border-width: 0 0 2px 0;
-  border-color: #2575dc;
+  border-color: #242629;
 }
 
 .tabs-color .tab-content {
@@ -5484,8 +5486,8 @@ input[type="file"] {
 
 .heading i {
   font-size: 30px;
-  color: #2575dc;
-  border: 2px solid #2575dc;
+  color: #242629;
+  border: 2px solid #242629;
   margin-bottom: 25px;
   display: inline-block;
   border-radius: 30px;
@@ -5895,7 +5897,7 @@ div.dataTables_wrapper div.dataTables_length select {
 }
 
 .forum-post .forum-body .forum-thumbnail .forum-thumbnail-resize:hover {
-  background-color: #2575dc;
+  background-color: #242629;
 }
 
 .forum-post .forum-body img + p {
@@ -5983,7 +5985,7 @@ div.dataTables_wrapper div.dataTables_length select {
   display: block;
   font-weight: 500;
   color: #fff;
-  background-color: #2575dc;
+  background-color: #242629;
   border-top-right-radius: 4px;
   border-top-left-radius: 4px;
   padding: 10px 15px;
@@ -6686,7 +6688,7 @@ div.dataTables_wrapper div.dataTables_length select {
 }
 
 .post-timeline .post .post-timeline-dot:hover {
-  border-color: #2575dc;
+  border-color: #242629;
 }
 
 .post-columns {
@@ -6942,7 +6944,7 @@ div.dataTables_wrapper div.dataTables_length select {
   background-color: #212121;
   padding: 20px 25px;
   display: inline-block;
-  border-left: 4px solid #2575dc;
+  border-left: 4px solid #242629;
   -webkit-box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
           box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
   border-radius: 4px;
@@ -7077,7 +7079,7 @@ figure {
   font-size: 14px;
   font-weight: 700;
   padding: 8px 0 8px 15px;
-  border-left: 3px solid #2575dc;
+  border-left: 3px solid #242629;
   color: #424242;
   margin-bottom: 15px;
 }
@@ -8198,7 +8200,7 @@ figure {
 }
 
 .select2-container--default .select2-selection--single {
-  padding: 8px 15px;
+  padding: 5px 15px;
   color: #878787;
   height: auto;
 }
@@ -8224,11 +8226,11 @@ figure {
 }
 
 .select2-container--default .select2-selection--single .select2-search--dropdown .select2-search__field:focus {
-  border-color: #639ce6;
+  border-color: #45494f;
 }
 
 .select2-container--default .select2-results__option--highlighted[aria-selected] {
-  background-color: #2575dc;
+  background-color: #242629;
 }
 
 .select2-container--default .select2-results__group {
@@ -8243,7 +8245,7 @@ figure {
 }
 
 .select2-container--default.select2-container--focus .select2-selection--multiple {
-  border-color: #639ce6;
+  border-color: #45494f;
 }
 
 .modal-body .select2-container {
@@ -8283,7 +8285,7 @@ figure {
 }
 
 .select2-container--default .select2-results__option--highlighted[aria-selected] {
-  background-color: #2575dc;
+  background-color: #242629;
   margin: 0 -1px;
 }
 
@@ -8301,9 +8303,9 @@ figure {
 }
 
 .select2-container--default .select2-selection--multiple .select2-selection__choice {
-  background-color: #3b83e0;
+  background-color: #303337;
   color: #fff;
-  border-color: #3b83e0;
+  border-color: #303337;
   font-size: 14px;
 }
 
@@ -8333,8 +8335,8 @@ figure {
 .flatpickr-day.selected.nextMonthDay,
 .flatpickr-day.startRange.nextMonthDay,
 .flatpickr-day.endRange.nextMonthDay {
-  background-color: #2575dc;
-  border-color: #2575dc;
+  background-color: #242629;
+  border-color: #242629;
   color: #fff;
 }
 
