--- a/resources/assets/scss/_variables.scss
+++ b/resources/assets/scss/_variables.scss
@@ -9,7 +9,7 @@ $font-size-sm:                          .875rem !default;
 $font-size-xs:                          .75rem !default;
 
 // Colors
-$theme-primary:                         #2575dc !default;
+$theme-primary:                         #242629 !default;
 $theme-secondary:                       #dc2745 !default;
 $theme-success:                         #6ab961 !default;
 $theme-info:                            #52BAFF !default;
@@ -83,7 +83,7 @@ $btn-default-border:                    #e2e2e2 !default;
 $btn-default-bg:                        #FFF !default;
 
 $btn-primary-color:                     #fff !default;
-$btn-primary-border:                    $theme-primary !default;
+$btn-primary-border:                    #b1b1b1 !default;
 $btn-primary-bg:                        $theme-primary !default;
 
 $btn-secondary-color:                   #787a7b !default;
