--- a/resources/assets/scss/_variables.scss
+++ b/resources/assets/scss/_variables.scss
@@ -19,9 +19,15 @@ $theme-inverse:                         #3f464f !default;
 
 // Game System Colors
 $color-xbox:                            #107C10 !default;
+$color-xbox-secondary:                  #5dc21e !default;
 $color-playstation:                     #003791 !default;
-$color-nintendo:                        #CE171E !default;
+$color-playstation-secondary:           #00a2ff !default;
+$color-nintendo:                        #E60012 !default;
+$color-nintendo-secondary:              #CE181E !default;
 $color-steam:                           #305f80 !default;
+$color-steam-secondary:                 #66c0f4 !default;
+$color-gog:                             #713b8d !default;
+$color-gog-secondary:                   #de8ae5 !default;
 $color-pc:                              #1B2838 !default;
 $color-uplay:                           #0070ff !default;
 
