--- a/resources/assets/scss/_badge.scss
+++ b/resources/assets/scss/_badge.scss
@@ -2,8 +2,8 @@
   text-transform: uppercase;
   font-size: 11px;
   font-weight: 400;
-  padding: 8px 12px;
-  border-radius: .25rem;
+  padding: 4px 12px;
+  border-radius: 0;
   color: #fff;
 }
 .badge-primary {
