--- a/resources/assets/scss/_custom.scss
+++ b/resources/assets/scss/_custom.scss
@@ -22,3 +22,8 @@ textarea:focus, button:focus, input:focus{
 .nav {
   font-family: $font-family-base;
 }
+.nav-img {
+  width: 212px;
+  height: 160px;
+  object-fit: cover;
+}
