--- a/resources/assets/scss/_responsive.scss
+++ b/resources/assets/scss/_responsive.scss
@@ -464,6 +464,12 @@
 			float: none;
 		}
 	}
+
+	.nav-img {
+		width: 100%;
+		height: auto;
+		object-fit: fill;
+	}
 }
 
 @media (max-width: 767px) {
