--- a/public/css/user/profile/edit.css
+++ b/public/css/user/profile/edit.css
@@ -1,1 +1,2 @@
 #cropperContainer{ width:180px; height:180px; position: relative; border:1px solid #ccc;}
+#cropperContainer2{ width:180px; height:102px; position: relative; border:1px solid #ccc;}
