--- a/resources/assets/scss/_custom.scss
+++ b/resources/assets/scss/_custom.scss
@@ -8,7 +8,7 @@ textarea:focus, button:focus, input:focus{
 }
 
 .website-link:hover {
-  color:#2c009f;
+  color:#0000EE;
 }
 
 .youtube-link:hover {
