--- a/resources/assets/scss/_badge.scss
+++ b/resources/assets/scss/_badge.scss
@@ -22,7 +22,7 @@
   background-color: $color-uplay;
 }
 .badge-playstation-4,
-.badge-ps4 {
+.badge-ps4, .badge-psvita {
   background-color: $color-playstation;
   transition: .2s ease-in-out;
 
